--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,23 +3,20 @@ kind: Deployment
 metadata:
 name: hello
 labels:
-  app: hello
+  apps: hello
 spec:
-strategy:
-  type: Recreate
-template:
-  metadata:
-    labels:
-      app: hello
-      tier: hello
-  spec:
-    containers:
-    - name: hello
-      image: hycloudsim/hello:latest
-      imagePullPolicy: Always
-      ports:
-      - containerPort: 5000
-        name: hello
+  template:
+    metadata:
+       labels:
+         app: hello
+         tier: hello
+    spec:
+      containers:
+      - name: hello
+        image: hycloudsim/hello:latest
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 5000
 
 ---
 apiVersion: v1
