--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,35 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-name: hello
-labels:
-  apps: hello
+  name: myapp-deployment
+  labels:
+    app: myapp
 spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: myapp
   template:
     metadata:
-       labels:
-         app: hello
-         tier: hello
+      labels:
+        app: myapp
     spec:
       containers:
-      - name: hello
-        image: hycloudsim/hello:latest
-        imagePullPolicy: Always
+      - name: myapp
+        image: hycloudsim/app:latest
         ports:
-        - containerPort: 5000
+        - containerPort: 8888
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-name: hello
-labels:
-  app: hello
+  name: myapp-service
 spec:
-ports:
-  - port: 5000
-    targetPort: 5000
-selector:
-  app: hello
-  tier: hello
-type: LoadBalancer
+  selector:
+    app: myapp
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 8888
+  type: LoadBalancer
